# TenstorrentAllreduce

./: README.md
charlie_work/: CMakeLists.txt
charlie_work/add_2_integers_in_compute2/: add_2_integers_in_compute2.cpp
charlie_work/add_2_integers_in_compute2/kernels/compute/: add_2_tiles.cpp
charlie_work/add_2_integers_in_compute2/kernels/dataflow/: reader_binary_1_tile.cpp
charlie_work/all_red_swing_1D/: all_red_swing_1D.cpp
charlie_work/allred_BO2_2D/: allred_BO2_2D.cpp
charlie_work/allred_BO2_2D/kernels/compute/: compute_kernel.cpp
charlie_work/allred_BO2_2D/kernels/dataflow/: dataflow_kernel.cpp
charlie_work/allred_BO_2D/: allred_BO_2D.cpp
charlie_work/allred_BO_2D/kernels/: compute_kernel.cpp  compute_kernel_ar.cpp  compute_kernel_reduce_scatter.cpp  dataflow_kernel multisync multicore.cpp  dataflow_kernel.cpp  dataflow_kernel_ar.cpp  dataflow_kernel_reduce_scatter.cpp
charlie_work/allred_BO_2D/kernels/compute/: compute_kernel copy 2.cpp  compute_kernel copy.cpp  compute_kernel v_completes.cpp  compute_kernel.cpp  compute_kernel_with_working.cpp  old_version.cpp
charlie_work/allred_BO_2D/kernels/dataflow/: dataflow_kernel copy.cpp  dataflow_kernel multisync singlecore.cpp  dataflow_kernel v_completes.cpp  dataflow_kernel.cpp
charlie_work/allred_LOO_2D/kernels/: dataflow_kernel.cpp
charlie_work/allred_LO_2D/: allred_LO_2D.cpp
charlie_work/allred_LO_2D/kernels/: compute_kernel.cpp  dataflow_kernel.cpp
charlie_work/allred_helper/: allred_helper.cpp  allred_helper.hpp
charlie_work/allred_mem_2D/: allred_mem_2D.cpp
charlie_work/allred_mem_2D/kernels/: dataflow_kernel.cpp
charlie_work/circular_buffer_tile_addition/: circular_buffer_tile_addition.cpp
charlie_work/hello_charlie/: hello_charlie.cpp
charlie_work/hello_charlie/kernels/: compute_add_to_local.cpp  dataflow_data_movement.cpp  dataflow_initializer.cpp
charlie_work/hello_core2core_1d/: hello_core2core_1d.cpp
charlie_work/hello_core2core_arr_simple/: hello_core2core_arr_simple.cpp
charlie_work/hello_core2core_array/: hello_core2core_array.cpp
charlie_work/hello_core2core_snake/: hello_core2core_snake.cpp
charlie_work/hello_core2core_snake/kernels/: lead_kernel.cpp
charlie_work/python/: profiler_results_analyzer.py  profiler_results_analyzer_timing_distributions.py  timing_taker.py
charlie_work/recdub_multicore_1D/: recdub_multicore_1D.cpp
charlie_work/recdub_multicore_2D/: recdub_multicore_2D.cpp
charlie_work/scratch_work/hello_core2core_snake/: hello_core2core_snake.cpp
charlie_work/scratch_work/swing_multicore2/: swing_multicore2.cpp
charlie_work/swing_multicore/: swing_multicore.cpp
charlie_work/swing_multicore/kernels/: compute_add_to_local.cpp  dataflow_data_movement.cpp
charlie_work/swing_multicore2/: swing_multicore2.cpp
charlie_work/swing_multicore_1D/: swing_multicore_1D.cpp  swing_multicore_1D_y.cpp
charlie_work/swing_multicore_2D/: swing_multicore_2D.cpp
(+46 files in other folders)
